--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "pforg-astro",
-  "type": "module",
   "version": "0.0.1",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
+    "refresh": "rm -rf .astro && rm -rf dist && npx astro sync",
     "build": "astro check && astro build",
     "preview": "astro preview",
     "astro": "astro"
@@ -13,6 +13,8 @@
     "@astrojs/check": "^0.9.3",
     "@astrojs/react": "^3.6.2",
     "@patternfly/patternfly": "6.0.0-prerelease.13",
+    "@patternfly/react-icons": "6.0.0-prerelease.4",
+    "@patternfly/react-styles": "6.0.0-prerelease.3",
     "@patternfly/react-code-editor": "6.0.0-prerelease.14",
     "@patternfly/react-core": "6.0.0-prerelease.14",
     "@patternfly/react-table": "6.0.0-prerelease.15",
